crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_multiple_filters.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx level:error\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE "service" = ? AND "level" = ?
---
params:
  0: 'nginx'
  1: 'error'
