crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_negated_text.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"-debug\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "message" NOT ILIKE ?
---
params:
  0: '%debug%'
