crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_quoted_phrase.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"\"connection refused\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "message" ILIKE ?
---
params:
  0: '%connection refused%'
