crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_regex.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(r\"host:/web-\\d+/\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE regexp_matches("host", ?)
---
params:
  0: 'web-\d+'
