crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_single_field_filter.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE "service" = ?
---
params:
  0: 'nginx'
