crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_time_filter.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"last:2h\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE CAST("timestamp" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '2 hours'
