crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_time_filter_days.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"last:7d\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE CAST("timestamp" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '7 days'
