crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_wildcard_no_filter.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"*\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
